fix(css): add overflow hidden

--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -1,5 +1,6 @@
 html,
 body {
+    overflow: hidden;
     background-color: rgba(0, 0, 0, 0.5);
 }
 
